marker in mealposting no longer being cut off

--- a/app/assets/stylesheets/meal_postings.scss
+++ b/app/assets/stylesheets/meal_postings.scss
@@ -102,7 +102,7 @@
     position: absolute;
 
     // top: 10.5%;
-    top: 8.5%;
+    top: 56px;
 
     left: 68%;
     z-index: 20;
@@ -230,7 +230,9 @@
           justify-content: center;
           align-items: center;
         }
-        // background-color: green;
+        .marker-space {
+          height: 2vw;
+        }
       }
     }
   }
